# torch-harmonics

./: .clang-format  .clang-format-ignore  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  Changelog.md  Dockerfile  Dockerfile.examples  Dockerfile.full  LICENSE  LICENSE.txt  README.md  SECURITY.md  SKILL.md  build_wheels.py  pyproject.toml  setup.py
.github/: dependabot.yml  test.yml
.github/templates/: release_checklist.md
.github/workflows/: build_and_deploy.yml  build_wheels.yml  deploy_kitmaker.yml  deploy_pypi.yml  release_checklist.yml  style.yml  tests.yml
.skills/disco-kernel-dev/: SKILL.md
.skills/test-writing/: SKILL.md
benchmarks/: __init__.py  attention.py  bench.py  benchmark_fused_spectral_conv.py  disco.py  reference_results.csv  run.py  sht.py
examples/: minimal_example.py  minimal_example_distributed.py  model_registry.py  pde_sphere.py  shallow_water_equations.py  train_2d3ds.py  train_sfno.py  train_sfno_dse.py  train_swe.py
examples/.ipynb_checkpoints/: train_sfno-checkpoint.py  train_sfno_DSE-checkpoint.py
examples/baseline_models/: __init__.py  ablation_transformer.py  egformer.py  requirements.txt  segformer.py  sphericalunet.py  transformer.py  unet.py
examples/benchmark_models/: segformer.py  transformer.py
examples/depth/: train.py
examples/segmentation/: train.py
examples/sfno_examples/: train_sfno.ipynb  train_sfno.py
examples/sfno_examples/models/: activations.py  contractions.py  layers.py  sfno.py
examples/shallow_water_equations/: train.py
examples/stanford_2d3ds/: train.py
examples/wandb/: latest-run
examples/wandb/run-20241201_161810-q8w40874/: run-q8w40874.wandb
examples/wandb/run-20241201_173250-vfe7zrm4/: run-vfe7zrm4.wandb
examples/wandb/run-20241201_192110-lbvctode/: run-lbvctode.wandb
latex/: disco_downsample_cartoon.tex  distributed_dhconv_cartoon.tex  distributed_disco_a2a_cartoon.tex  distributed_disco_ring_cartoon.tex  distributed_sht_cartoon.tex
notebooks/: conditioning_sht.ipynb  disco_conv_2d.ipynb  equivariance_test.ipynb  filter_basis_functions.ipynb  getting_started.ipynb  gradient_analysis.ipynb  helmholtz.ipynb  partial_derivatives.ipynb  pde_sphere.ipynb  plot_spherical_harmonics.ipynb  plotting.py  quadrature.ipynb  resample_sphere.ipynb  segmentation_dataset.ipynb  shallow_water_equations.ipynb  stanford_2d3ds_dataset.ipynb  train_sfno.ipynb  train_spherical_neural_operator.ipynb
performance/disco/: minibench_kpacked_wgmma.py
scripts/: check_license_header.py
tests/: conftest.py  disco_test_utils.py  run_tests.sh  test_attention.py  test_cache.py  test_convolution.py  test_convolution_tensor.py  test_distributed_attention.py  test_distributed_backward_transform.py  test_distributed_convolution.py  test_distributed_forward_transform.py  test_distributed_primitives.py  test_distributed_quadrature.py  test_distributed_resample.py  test_distributed_sht.py  test_distributed_spectral_convolution.py  test_fft.py  test_fft_contraction.py  test_filter_basis.py  test_fused_exact_and_bf16_tolerance.py  test_permute.py  test_quadrature.py  test_random_fields.py  test_resample.py  test_sht.py  test_spectral_convolution.py  testutils.py
tests/distributed/: test_distributed_backward_transform.py  test_distributed_forward_transform.py
torch_harmonics/: __init__.py  _disco_convolution.py  _neighborhood_attention.py  attention.py  cache.py  convolution.py  convolution_tensor_s2.py  disco_convolutions.py  fft.py  filter_basis.py  legendre.py  legendre_legacy.py  plotting.py  quadrature.py  random_fields.py  random_sampling.py  resample.py  resampling.py  s2_convolutions.py  s2convolutions.py  sht.py  sht_dse.py  spectral_convolution.py  test_torch_harmonics.py  tests.py  truncation.py  utils.py
torch_harmonics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
torch_harmonics/.ipynb_checkpoints/: __init__-checkpoint.py  random_sampling-checkpoint.py  resampling-checkpoint.py  sht-checkpoint.py  sht_dse-checkpoint.py
torch_harmonics/attention/: __init__.py  _attention_utils.py  _neighborhood_attention.py  attention.py
torch_harmonics/benchmark/: __init__.py  __main__.py  benchmark.py  disco.py  hardware.py  memory.py  run.py  sht.py  timer.py
torch_harmonics/disco/: __init__.py  _convolution.py  _disco_utils.py  convolution.py
torch_harmonics/distributed/: __init__.py  _amp_utils.py  distributed_attention.py  distributed_convolution.py  distributed_convolution_ring.py  distributed_quadrature.py  distributed_resample.py  distributed_sht.py  distributed_spectral_convolution.py  primitives.py  utils.py
torch_harmonics/examples/: __init__.py  get_2d3ds_dataset.py  losses.py  metrics.py  pde_dataset.py  pde_sphere.py  segmentation_dataset.py  shallow_water_equations.py  stanford_2d3ds_dataset.py
torch_harmonics/spectral/: __init__.py  _spectral_utils.py
torch_harmonics/utils/: __init__.py  _utils.py
(+195 files in other folders)
