[build-system]
requires = [ "setuptools", "setuptools-scm", "torch>=2.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_harmonics"
authors = [
    { name="Boris Bonev", email = "bbonev@nvidia.com" },
    { name="Thorsten Kurth", email = "tkurth@nvidia.com" },
    { name="Mauro Bisson" },
    { name="Massimiliano Fatica" },
    { name="Jean Kossaifi" },
    { name="Nikola Kovachki" },
    { name="Christian Hundt" },
]

maintainers = [
    { name="Thorsten Kurth", email = "tkurth@nvidia.com" },
    { name="Boris Bonev", email = "bbonev@nvidia.com" },
]

readme = "README.md"

license = "BSD-3-Clause"

dynamic = ["version"]

description = "Differentiable signal processing on the sphere for PyTorch."
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.4.0",
    "numpy>=1.22.4,<1.25",
]

[tool.setuptools.dynamic]
version = {attr = "torch_harmonics.__version__"}

[tool.setuptools.packages.find]
    include = ["torch_harmonics*"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "coverage>=6.5.0",
]